<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/txt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themeLoginBackground"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start|top"
            android:text="@string/verification_code"
            android:textColor="@color/themeLoginSepratorColor"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txt_enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_code"
            android:background="@color/themeLoginBackground"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start|top"
            android:text="@string/enter_verification_code"
            android:textColor="@color/themeLoginSepratorColor"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_enter_code"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_1sdp"
            android:background="@drawable/reset_password_background"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/enter_code"
            android:textColor="@color/themeTextColor"
            android:textSize="@dimen/_12ssp"
            tools:targetApi="lollipop"
            tools:ignore="Autofill" />
        <Button
            android:id="@+id/btn_resend"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_code"
            android:background="@color/themeLoginBackground"
            android:gravity="center"
            android:text="@string/resend_code"
            android:textAllCaps="false"
            android:textColor="@color/themeStepsLinkColor"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>
