<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".DialogForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themeLoginBackground"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start|top"
            android:text="@string/forgot_password"
            android:textColor="@color/themeLoginSepratorColor"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_forgot_password"
            android:background="@color/themeLoginBackground"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start|top"
            android:text="@string/reset_password"
            android:textColor="@color/themeLoginSepratorColor"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_reset_password"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/reset_password_background"
            android:gravity="start|top"
            android:inputType="number"
            android:hint="@string/phone_number"
            android:textColor="@color/themeTextColor"
            android:textSize="@dimen/_12ssp"
            tools:targetApi="lollipop"
            tools:ignore="Autofill" />
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@id/et_mobile"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/login_button_background"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/themeLabelTitleColor"
            android:textSize="@dimen/_12ssp" />
    </RelativeLayout>
