<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerRegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress_bar_circle"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/rl1"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/login_button_background"
        android:gravity="center"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/themeLabelTitleColor"
        android:textSize="@dimen/_12ssp" />


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/name"
            app:hintTextColor="@color/themeTextColor"
            tools:targetApi="lollipop">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingBottom="@dimen/space_text_tiny"
                android:singleLine="true"
                android:textColor="@color/themeTextColor"
                android:textSize="@dimen/_14ssp"
                android:theme="@style/EditTextTheme"
                tools:ignore="LabelFor"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/mobile"
            app:hintTextColor="@color/themeTextColor"
            tools:targetApi="lollipop">

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingBottom="@dimen/space_text_tiny"
                android:singleLine="true"
                android:textColor="@color/themeTextColor"
                android:textSize="@dimen/_14ssp"
                android:theme="@style/EditTextTheme"
                tools:ignore="LabelFor"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/email"
            app:hintTextColor="@color/themeTextColor"
            tools:targetApi="lollipop">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/space_text_tiny"
                android:singleLine="true"
                android:textColor="@color/themeTextColor"
                android:textSize="@dimen/_14ssp"
                android:theme="@style/EditTextTheme"
                tools:ignore="LabelFor"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/password"
            app:hintTextColor="@color/themeTextColor"
            tools:targetApi="lollipop">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/space_text_tiny"
                android:singleLine="true"
                android:textColor="@color/themeTextColor"
                android:textSize="@dimen/_14ssp"
                android:theme="@style/EditTextTheme"
                tools:ignore="LabelFor"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/password_verification"
            app:hintTextColor="@color/themeTextColor"
            tools:targetApi="lollipop">

            <EditText
                android:id="@+id/et_password_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/space_text_tiny"
                android:singleLine="true"
                android:textColor="@color/themeTextColor"
                android:textSize="@dimen/_14ssp"
                android:theme="@style/EditTextTheme"
                tools:ignore="LabelFor"
                tools:targetApi="lollipop" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_owner_height"
        android:layout_below="@id/ll1"
        android:gravity="start"
        android:paddingStart="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/img_owner_male"
            android:layout_width="@dimen/icon_owner_width"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@color/themeOwnerUnselectedColor"
            android:foreground="@drawable/rounded_background"
            android:src="@drawable/img_selected_owner_male"
            tools:ignore="ContentDescription,UnusedAttribute"
            tools:targetApi="m" />

        <ImageView
            android:id="@+id/img_owner_woman"
            android:layout_width="@dimen/icon_owner_width"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/txt_or"
            android:layout_toRightOf="@id/txt_or"
            android:background="@color/themeOwnerSelectedColor"
            android:foreground="@drawable/rounded_background"
            android:src="@drawable/img_unselected_owner_women"
            tools:ignore="ContentDescription,UnusedAttribute"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/txt_or"
            android:layout_width="@dimen/icon_owner_width"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/img_owner_male"
            android:layout_toRightOf="@id/img_owner_male"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:background="@color/themeBackgroundLightGray"
        android:gravity="start|center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingLeft="@dimen/_20sdp"
        android:text="@string/title"
        android:textColor="@color/themeNavigationColor"
        android:textSize="@dimen/_35ssp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>