<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/themeLoginSepratorColor" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_below="@id/view1"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/img_profile"
        android:foreground="@drawable/rounded_background"
        tools:ignore="ContentDescription,UnusedAttribute"
        tools:targetApi="m"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_below="@id/img_profile"
        android:background="@color/themeLoginSepratorColor" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:background="@color/themeLoginBackground"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_phone_white"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_phone"
                android:layout_toRightOf="@+id/img_phone"
                android:gravity="start"
                android:hint="@string/mobile"
                app:hintTextColor="@color/themeTextColor"
                tools:targetApi="lollipop">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_text_tiny"
                    android:theme="@style/EditTextTheme"
                    android:gravity="start"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/themeTextColor"
                    android:textSize="@dimen/_14sdp"
                    android:singleLine="true"
                    tools:ignore="LabelFor"
                    tools:targetApi="lollipop" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_lock"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_lock_white"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/img_lock"
                android:layout_toRightOf="@+id/img_lock"
                android:gravity="start"
                android:hint="@string/password"
                app:hintTextColor="@color/themeTextColor"
                tools:targetApi="lollipop">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_text_tiny"
                    android:theme="@style/EditTextTheme"
                    android:gravity="start"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/themeTextColor"
                    android:textSize="@dimen/_14sdp"
                    android:singleLine="true"
                    tools:ignore="LabelFor"
                    tools:targetApi="lollipop" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:layout_below="@id/ll1"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/login_button_background"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/themeLabelTitleColor"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/login_button_background"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/themeLabelTitleColor"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll2"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/themeLoginBackground"
        android:orientation="vertical">

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/themeLoginSepratorColor" />

        <Button
            android:id="@+id/btn_forgot_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/themeLoginBackground"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/themeBackgroundLightGray"
            android:textSize="@dimen/_12sdp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/themeLoginSepratorColor" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress_bar_circle"
        android:visibility="gone" />

</RelativeLayout>